# brainrotism

./: .gitignore  API_STRUCTURE.md  README.md  app.py  crud.py  database.py  models.py  package-lock.json  package.json  pyproject.toml  schemas.py  utils.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  shims-vue.d.ts  style.css
frontend/src/assets/: router.ts
frontend/src/components/: AR.vue  Character.vue  LocationAR.vue  Map.vue
frontend/src/views/: CharactersLibraryView.vue  CharactersStore.vue  HomeView.vue  LeaderboardView.vue  MapView.vue  ProfileView.vue  SettingsView.vue
routers/: __init__.py  admin.py  auth.py  characters.py  cities.py  economy.py  items.py
